tests/negative/typechecker_bad11.sp
(* Mismatched types in function call *)

concatenate_strings:String (str1:String, str2:String) {
  return str1 + str2;
}


main: Int () {
    return 0;
}